refactor: restructure model serving configuration system
- Move serve args from engine-specific files to centralized model_serve_args/ directory
- Update file naming convention: {model_name}.{config}.json format
- Implement hierarchical config lookup: model-specific configs fallback to global configs
- Remove legacy serve-args.json generation from build-engine script
- Simplify trtllm-serve argument parsing and config loading
- Add new benchmark scripts for engine and PyTorch performance testing
- Update .gitignore to exclude serve config JSON files and webui artifacts
- Mount model_serve_args volume in Docker container

This refactoring centralizes serving configurations, making them reusable across
different engine builds and easier to manage. The new structure supports both
model-specific and global serving configurations with automatic fallback.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ TensorRT-Model-Optimizer
 engines/**
 model_weights/**
 model_build_configs/**
+model_serve_args/*.json
 scripts/**/model.cache
 scripts/models/*.json
 venv/
@@ -16,3 +17,4 @@ __pycache__/
 *.bak
 extra_llm_api_options/*.yml
 .tool-versions
+.webui*
